# KeSp_software

./: CLAUDE.md  Cargo.toml  default.json  shell.nix
src/: keycode_catalog.rs  main.rs  models.rs  msg.rs
src/bridge/: advanced.rs  connection.rs  key_selector.rs  keymap.rs  macros.rs  mod.rs  settings.rs  stats.rs
src/logic/: binary_protocol.rs  flasher.rs  keycode.rs  layout.rs  layout_remap.rs  mod.rs  parsers.rs  protocol.rs  settings.rs  stats_analyzer.rs
src/logic/serial/: mod.rs  native.rs
ui/: globals.slint  main.slint  theme.slint
ui/components/: connection_bar.slint  key_button.slint  key_selector.slint  keyboard_view.slint  notification.slint  status_bar.slint
ui/tabs/: tab_advanced.slint  tab_keymap.slint  tab_macros.slint  tab_settings.slint  tab_stats.slint
