[package]
name = "kesp-controller"
version = "0.1.0"
edition = "2021"
description = "KaSe/KeSp split keyboard configuration tool"

[dependencies]
slint = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
rfd = "0.15"

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
